backend/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: army-cop
  labels:
    name: army-cop
